changed 'my works' section

--- a/index.html
+++ b/index.html
@@ -199,9 +199,12 @@
 <div class="bodyWrap wide80">
   <div id="portfolio" class="heading">My Work</div><hr>
   <div class="body">
-    <div class="portfolioElement">
+      <div class="portfolioElement">
+        <a class="portfolioAnchor" href="https://homework014-project002.herokuapp.com/" target="_blank"><img src="aficionado.png" alt="A placeholder Image"><br>Aficionado, Art of the Rijksmuseum</a>
+      </div>
+    <!-- <div class="portfolioElement">
       <a class="portfolioAnchor" href="https://ascherd001.github.io/Hangman001/" target="_blank"><img src="hangman.png" alt="A placeholder Image"><br>Showdown at High Noon Hangman</a>
-    </div>
+    </div> -->
     <div class="portfolioElement">
       <a class="portfolioAnchor" href="https://ascherd001.github.io/Homework004-RPG-Game/" target="_blank"><img src="rpg.png" alt="A placeholder Image"><br>Animated RPG Puzzle Game</a>
     </div>
