--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
  
 <!-- Nav -->
-<a href="assets/pdf/resume001.pdf" target="_blank"><div id="nav">&nbsp;Daniel Ascher</div></a>
+<a href="assets/pdf/resume001.pdf" target="_blank"><div id="nav">&nbsp;Daniel Ascher<span id="clickMe">  <- Click for my Resume</span></div></a>
 
 <!-- Body -->
 <div id="titleWrap">
@@ -35,9 +35,12 @@
 
 <div class="bodyWrap wide80">
     <div id="about" class="heading">About Me</div><hr>
-  <div class="body">
-      A full-stack web developer specializing in UI/UX, design and development of video games, passionate about art and graphic design, and loves all things technological.<br><br>Experience in ECMAScript6, HTML5, CSS3, JQuery, Bootstrap, NodeJS, Express, MySQL, MongoDB, ReactJS, Handlebars, Firebase, and Google Libraries.<br><br>Additionally knowledgeable in Adobe Creative Cloud, MS Office 2016, and Windows 10.
-      
+  <div id="aboutMe" class="body">
+      <img id="me" src="assets/images/me.png" alt="A photo of Daniel">
+      My name is Daniel.  I'm based in Charlotte, North Carolina; however, relocation is not off the table.<br><br>
+      I joined a full stack web development bootcamp because I figured the best way to learn any new language is through immersion.  "Drinking through a firehose," they called it.<br><br>
+      I came to realize that I can learn new things very quickly, I have the tools to teach myself just about anything, and when the pressure is on...  That is when I really shine.<br><br>
+      I have a passion for learning new things, best practices, and efficiency.  Excited to open the next chapter in my life, I'm prepared for whatever comes next.
   </div>
 
 </div>
@@ -63,6 +66,19 @@
   </div>
 
 </div>
+
+<!-- Temp Image Test -->
+<div id="test4"></div>
+
+<div class="bodyWrap wide80">
+    <div id="about" class="heading">Experience</div><hr>
+  <div class="body">
+      A full-stack web developer specializing in UI/UX, design and development of video games, passionate about art and graphic design, and loves all things technological.<br><br>Experience in ECMAScript6, HTML5, CSS3, JQuery, Bootstrap, NodeJS, Express, MySQL, MongoDB, ReactJS, Handlebars, Firebase, and Google Libraries.<br><br>Additionally knowledgeable in Adobe Creative Cloud, MS Office 2016, and Windows 10.
+      
+  </div>
+
+</div>
+
 <!-- Temp Image Test -->
 <div id="test3"></div>
 
