--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
  
 <!-- Nav -->
-<a href="assets/pdf/resume001.pdf" target="_blank"><div id="nav">&nbsp;Daniel Ascher<span id="clickMe">  <- Click for my Resume</span></div></a>
+<a href="assets/pdf/DanielAscherResume2017.pdf" target="_blank"><div id="nav">&nbsp;Daniel Ascher<span id="clickMe">  <- Click for my Resume</span></div></a>
 
 <!-- Body -->
 <div id="titleWrap">
