--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
  
 <!-- Nav -->
-<a href="assets/pdf/DanielAscherResume2017.pdf" target="_blank"><div id="nav">&nbsp;Daniel Ascher<span id="clickMe">  <- Click for my Resume</span></div></a>
+<a href="assets/pdf/DanielAscher_2017.pdf" target="_blank"><div id="nav">&nbsp;Daniel Ascher<span id="clickMe">  <- Click for my Resume</span></div></a>
 
 <!-- Body -->
 <div id="titleWrap">
@@ -73,7 +73,7 @@
 <div class="bodyWrap wide80">
     <div id="about" class="heading">Experience</div><hr>
   <div class="body">
-      A full-stack web developer specializing in UI/UX, design and development of video games, passionate about art and graphic design, and loves all things technological.<br><br>Experience in ECMAScript6, HTML5, CSS3, JQuery, Bootstrap, NodeJS, Express, MySQL, MongoDB, ReactJS, Handlebars, Firebase, and Google Libraries.<br><br>Additionally knowledgeable in Adobe Creative Cloud, MS Office 2016, and Windows 10.
+      A full-stack web developer specializing in UI/UX, design and development of video games, passionate about art and graphic design, and loves all things technological.<br><br>Experience in Javascript/ECMAScript6, HTML5, CSS3, JQuery, Bootstrap, NodeJS, Express, MySQL, MongoDB, ReactJS, Handlebars, Firebase, and Google Libraries.<br><br>Additionally knowledgeable in Adobe Creative Cloud, MS Office 2016, and Windows 10.
       
   </div>
 
