Adding Title Image

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <div class="bodyWrap wide80">
     <div id="about" class="heading">About Me</div><hr>
   <div id="aboutMe" class="body">
+      <img src="assets/images/PortfolioTitle001.png" width="0" height="0">
       <img id="me" src="assets/images/me.png" alt="A photo of Daniel">
       My name is Daniel.  I'm based in Charlotte, North Carolina; however, relocation is not off the table.<br><br>
       I joined a full stack web development bootcamp because I figured the best way to learn any new language is through immersion.  "Drinking through a firehose," they called it.<br><br>
